force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Item ID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>CCXR_Items__c.CCXR_Item_Category__c</field>
            <operation>equals</operation>
            <valueField>$Source.CCXR_Item_Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>CCXR_Items__c.CCXR_Item_SubCategory__c</field>
            <operation>equals</operation>
            <valueField>$Source.CCXR_Sub_Category__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCXR_Items__c</referenceTo>
    <relationshipLabel>CCXR_Order Line Items</relationshipLabel>
    <relationshipName>CCXR_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>