force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Sub_Category__c</fullName>
    <label>CCXR_Sub_Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starters</fullName>
            </value>
            <value>
                <fullName>Desserts</fullName>
            </value>
            <value>
                <fullName>Soups</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Roti</fullName>
            </value>
            <value>
                <fullName>Curries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>